--- a/src/DotnetAffected.Tasks/DotnetAffected.Tasks.csproj
+++ b/src/DotnetAffected.Tasks/DotnetAffected.Tasks.csproj
@@ -4,6 +4,7 @@
 
     <PropertyGroup>
         <RootNamespace>DotnetAffected.Tasks</RootNamespace>
+        <PackageId>Tennisi.DotnetAffected.Tasks</PackageId>
 
         <ExcludeFromSourceBuild>true</ExcludeFromSourceBuild>
 
