--- a/src/DotnetAffected.Tasks/Examples/ad-hoc-reference.props
+++ b/src/DotnetAffected.Tasks/Examples/ad-hoc-reference.props
@@ -1,15 +1,15 @@
 <Project Sdk="Microsoft.Build.Traversal/3.2.0">
     <ItemGroup>
         <!-- If CentralPackageVersionManagement is enabled -->
-        <PackageReference Include="DotnetAffected.Tasks" GeneratePathProperty="true"/>
-        <PackageVersion Include="DotnetAffected.Tasks" Version="3.0.0"/>
+        <PackageReference Include="Tennisi.DotnetAffected.Tasks" GeneratePathProperty="true"/>
+        <PackageVersion Include="Tennisi.DotnetAffected.Tasks" Version="3.0.0"/>
 
         <!-- If CentralPackageVersionManagement is NOT enabled -->
-        <!-- <PackageReference Include="DotnetAffected.Tasks" Version="3.0.0" GeneratePathProperty="true" /> -->
+        <!-- <PackageReference Include="Tennisi.DotnetAffected.Tasks" Version="3.0.0" GeneratePathProperty="true" /> -->
     </ItemGroup>
 
-    <Import Project="$(PKGDotnetAffected_Tasks)/Sdk/Sdk.props"/>
-    <Import Project="$(PKGDotnetAffected_Tasks)/Sdk/Sdk.targets"/>
+    <Import Project="$(PKGTennisi_DotnetAffected_Tasks)/Sdk/Sdk.props"/>
+    <Import Project="$(PKGTennisi_DotnetAffected_Tasks)/Sdk/Sdk.targets"/>
 
     <Target Name="_DotnetAffectedCheck" AfterTargets="DotnetAffectedCheck">
         <Message Text="Found $(DotnetAffectedProjectCount) projects: " Importance="high"/>
