--- a/src/DotnetAffected.Tasks/Examples/top-level-reference.props
+++ b/src/DotnetAffected.Tasks/Examples/top-level-reference.props
@@ -1,4 +1,4 @@
-<Project Sdk="DotnetAffected.Tasks/3.0.0;Microsoft.Build.Traversal/3.2.0">
+<Project Sdk="Tennisi.DotnetAffected.Tasks/3.0.0;Microsoft.Build.Traversal/3.2.0">
     <Target Name="_DotnetAffectedCheck" AfterTargets="DotnetAffectedCheck">
         <Message Text="Found $(DotnetAffectedProjectCount) projects: " Importance="high"/>
         <Message Text="  >> %(ProjectReference.Identity)" Importance="high"/>
