--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,6 +1,6 @@
-﻿<Project>
+<Project>
     <PropertyGroup>
-        <TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
+        <TargetFrameworks>net8.0</TargetFrameworks>
 
         <LangVersion>9.0</LangVersion>
 
@@ -16,7 +16,6 @@
     <!-- Some general configuration applied to all projects -->
     <PropertyGroup>
         <SourcesPath>$(MSBuildThisFileDirectory)src/</SourcesPath>
-        <TestPath>$(MSBuildThisFileDirectory)test/</TestPath>
         <CliPath>$(SourcesPath)dotnet-affected/</CliPath>
         <PackageDefaultsPropsPath>$(MSBuildThisFileDirectory)package-defaults.props</PackageDefaultsPropsPath>
     </PropertyGroup>
